--- a/rmthompson-accounting-solution/ZionSoftware.Solutions.Data.Tests.NUnit/ZionSoftware.Solutions.Data.Tests.NUnit.csproj
+++ b/rmthompson-accounting-solution/ZionSoftware.Solutions.Data.Tests.NUnit/ZionSoftware.Solutions.Data.Tests.NUnit.csproj
@@ -45,7 +45,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="DatabaseExecuteNonQueryFixture.cs" />
+    <Compile Include="DatabaseExtensionsFixture.cs" />
+    <Compile Include="DatabaseFixture.cs" />
+    <Compile Include="DatabaseParameterizedSqlTextFixture.cs" />
+    <Compile Include="DataTableBuilderFixture.cs" />
+    <Compile Include="DbFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <DependentUpon>Resources.resx</DependentUpon>
