--- a/rmthompson-accounting-solution/ZionSoftware.Solutions.Data.Tests.NUnit/ZionSoftware.Solutions.Data.Tests.NUnit.csproj
+++ b/rmthompson-accounting-solution/ZionSoftware.Solutions.Data.Tests.NUnit/ZionSoftware.Solutions.Data.Tests.NUnit.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ZionSoftware.Solutions.Data.Tests.NUnit</RootNamespace>
     <AssemblyName>ZionSoftware.Solutions.Data.Tests.NUnit</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
